update android16-s2-release